# AgentOS

./: .gitignore  CLAUDE.md  README.md  project_structure.md  pyproject.toml  system_prompt.md
docs/: QUICKSTART.md  VISION.md
examples/: full_demo.py  phase1_demo.py  rlm_ollama.py
examples/labos_ml_replication/: run_dag.py  run_rlm.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AgentCard.tsx  ArtifactBrowser.tsx  BudgetBar.tsx  DagGraph.tsx  EmptyState.tsx  ErrorBanner.tsx  EventLog.tsx  RoleConfigurator.tsx  Spinner.tsx  ToolBadge.tsx
frontend/src/pages/: DomainPicker.tsx  Home.tsx  NLCreator.tsx  SessionDashboard.tsx  SessionHistory.tsx  Settings.tsx  (+2 more)
tests/: conftest.py
tests/unit/: test_acceptance.py  test_agent_action.py  test_agent_runner.py  test_budget_manager.py  test_code_execute_tool.py  test_codeos_tools.py  test_concurrency.py  test_context_manager.py  test_context_pack.py  test_dag.py  test_data_contracts.py  test_domain_registry.py  test_episodic.py  test_errors.py  test_eval.py  test_event_log.py  test_file_list_tool.py  test_google_tools.py  test_hashing.py  test_http_request_tool.py  test_identifiers.py  test_labos_eval.py  test_labos_schemas.py  test_labos_tools.py  test_labos_workflow.py  test_lm_provider.py  test_lm_providers.py  test_model_registry.py  test_nl_generator.py  test_permissions.py  test_platform_settings.py  test_recursive_executor.py  test_repl.py  test_replay.py  test_role_template.py  test_schemas.py  test_semantic.py  test_session_config.py  test_session_orchestrator.py  test_slack_tools.py  (+12 more)
(+25 files in other folders)
