[project]
name = "agentos-monorepo"
version = "0.1.0"
description = "AgentOS — domain-agnostic cognitive execution substrate"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages/agentos", "packages/labos", "packages/codeos"]
markers = [
    "integration: cross-module integration tests",
    "e2e: full end-to-end pipeline tests",
    "slow: tests that take more than a few seconds",
    "network: tests requiring network access (e.g. Ollama)",
    "replay: deterministic replay tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "packages/agentos"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
